[gd_scene load_steps=7 format=2]

[ext_resource path="res://HumanControl.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://bin/environment_node.gdns" type="Script" id=3]
[ext_resource path="res://pendulum/Pendulum.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 2 )

[node name="HumanControl" type="Node"]
script = ExtResource( 1 )

[node name="Env" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Pendulum" parent="." instance=ExtResource( 4 )]

[node name="RewardLabel" type="Label" parent="."]
margin_left = 36.5457
margin_top = 37.3182
margin_right = 268.546
margin_bottom = 95.3182
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "reward: 0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneLabel" type="Label" parent="."]
margin_left = 30.5003
margin_top = 135.0
margin_right = 288.5
margin_bottom = 198.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "done: false"

[node name="VelocityLabel" type="Label" parent="."]
margin_left = 35.0
margin_top = 392.0
margin_right = 293.0
margin_bottom = 455.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "velocity: 0.0"
